@@ -14,7 +14,7 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
 import javax.servlet.http.HttpServletResponse;
-import java.util.Arrays;
+import java.util.List;
 
 @EnableWebSecurity
 public class SecurityTokenConfig extends WebSecurityConfigurerAdapter {
@@ -47,6 +47,7 @@ public class SecurityTokenConfig extends WebSecurityConfigurerAdapter {
                 .antMatchers("/services/location-service/**").permitAll()
                 .antMatchers("/services/user-service/**").permitAll()
                 .antMatchers("/services/message-service/**").permitAll()
+                .antMatchers("/services/notification-service/**").permitAll()
                 // Any other request must be authenticated
                 .anyRequest().authenticated();
     }
@@ -70,7 +71,7 @@ public class SecurityTokenConfig extends WebSecurityConfigurerAdapter {
         config.addAllowedMethod("DELETE");
         config.addAllowedMethod("PATCH");
         config.setAllowCredentials(true);
-        config.setAllowedHeaders(Arrays.asList("Authorization", "content-type"));
+        config.setAllowedHeaders(List.of("Authorization", "content-type"));
         source.registerCorsConfiguration("/**", config);
         return new CorsFilter(source);
     }
